--- a/home/home.html
+++ b/home/home.html
@@ -13,32 +13,41 @@
 <body>
 
     <!-- Navbar -->
-    <nav id="navbar">
-        <div class="links_div">
-            <a class="links" href="#">Books</a>
-            <a class="links" href="#">Quizzes</a>
-            <a class="links" href="#">Snippets</a>
-            <a class="links" href="#">Tools</a>
-        </div>
-        <button onclick="openNavDiv()" id="open_nav_btn"><i class="fa-solid fa-bars"></i></button>
-    </nav>
+    <div id="navDiv">
+        <nav id="navbar">
+            <div class="links_div">
+                <a class="links" href="#">Books</a>
+                <a class="links" href="#">Quizzes</a>
+                <a class="links" href="#">Snippets</a>
+                <a class="links" href="#">Tools</a>
+            </div>
+            <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
+                    aria-hidden="true"></i></button>
 
-
-    <div id="open_nav_div">
-        <button onclick="closeNavDiv()" id="close_nav_btn"><i class="fa-solid fa-xmark"></i></button>
-        <a class="links" href="#">Books</a>
-        <br>
-        <hr>
-        <a class="links" href="#">Quizzes</a>
-        <br>
-        <hr>
-        <a class="links" href="#">Snippets</a>
-        <br>
-        <hr>
-        <a class="links" href="#">Tools</a>
-        <br>
+            <div id="navLinksResponsive">
+                <p><a class="links" href="#">Books</a></p>
+                <p></p><a class="links" href="#">Quizzes</a></p>
+                <p><a class="links" href="#">Snippets</a></p>
+                <p><a class="links" href="#">Tools</a></p>
+            </div>
+        </nav>
     </div>
-
+    <!-- <div>
+        <div id="open_nav_div">
+            <button onclick="closeNavDiv()" id="close_nav_btn"><i class="fa-solid fa-xmark"></i></button>
+            <a class="links" href="#">Books</a>
+            <br>
+            <hr>
+            <a class="links" href="#">Quizzes</a>
+            <br>
+            <hr>
+            <a class="links" href="#">Snippets</a>
+            <br>
+            <hr>
+            <a class="links" href="#">Tools</a>
+            <br>
+        </div>
+    </div> -->
 
 
 
