--- a/home/home.html
+++ b/home/home.html
@@ -24,30 +24,17 @@
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
 
-            <div id="navLinksResponsive">
-                <p><a class="links" href="#">Books</a></p>
-                <p></p><a class="links" href="#">Quizzes</a></p>
-                <p><a class="links" href="#">Snippets</a></p>
-                <p><a class="links" href="#">Tools</a></p>
+            <div id="navLinksDiv2">
+                <div id="navLinksResponsive">
+                    <p><a class="links" href="#">Books</a></p>
+                    <p></p><a class="links" href="#">Quizzes</a></p>
+                    <p><a class="links" href="#">Snippets</a></p>
+                    <p><a class="links" href="#">Tools</a></p>
+                </div>
             </div>
         </nav>
     </div>
-    <!-- <div>
-        <div id="open_nav_div">
-            <button onclick="closeNavDiv()" id="close_nav_btn"><i class="fa-solid fa-xmark"></i></button>
-            <a class="links" href="#">Books</a>
-            <br>
-            <hr>
-            <a class="links" href="#">Quizzes</a>
-            <br>
-            <hr>
-            <a class="links" href="#">Snippets</a>
-            <br>
-            <hr>
-            <a class="links" href="#">Tools</a>
-            <br>
-        </div>
-    </div> -->
+
 
 
 
