--- a/home/home.html
+++ b/home/home.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <div id="navDiv">
         <nav id="navbar">
-            <div class="links_div">
+            <div class="nav_links_div">
                 <a class="links" href="#">Books</a>
                 <a class="links" href="#">Quizzes</a>
                 <a class="links" href="#">Snippets</a>
@@ -24,16 +24,16 @@
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
 
-            <div id="navLinksDiv2">
-                <div id="navLinksResponsive">
-                    <p><a class="links" href="#">Books</a></p>
-                    <p></p><a class="links" href="#">Quizzes</a></p>
-                    <p><a class="links" href="#">Snippets</a></p>
-                    <p><a class="links" href="#">Tools</a></p>
-                </div>
+                    <div id="responsiveNavLinksDivMain">
+                        <div id="responsiveNavLinksDiv">
+                            <p><a class="links" href="#">Books</a></p>
+                            <p></p><a class="links" href="#">Quizzes</a></p>
+                            <p><a class="links" href="#">Snippets</a></p>
+                            <p><a class="links" href="#">Tools</a></p>
+                        </div>
+                    </div>
+                </nav>
             </div>
-        </nav>
-    </div>
 
 
 
