--- a/home/home.html
+++ b/home/home.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 </head>
 
 <body>
@@ -15,6 +16,7 @@
     <!-- Navbar -->
     <div id="navDiv">
         <nav id="navbar">
+            <p id="nav_logo_heading">Men's Closet</p>
             <div class="nav_links_div">
                 <a class="links" href="#">Books</a>
                 <a class="links" href="#">Quizzes</a>
@@ -35,6 +37,18 @@
         </nav>
     </div>
 
+
+    <div class="w3-content w3-section" style="height: 300px;">
+        <img class="mySlides"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsLx3mwqvTSS8EUXspjzhSbGdPer8ygKydkztiVT73&s"
+            style="width:100%; height: 500px;">
+        <img class="mySlides"
+            src="https://images.pexels.com/photos/120049/pexels-photo-120049.jpeg?cs=srgb&dl=pexels-mike-b-120049.jpg&fm=jpg"
+            style="width:100%; height: 500px;">
+        <img class="mySlides"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDXNiN9nNjUZJH1nqJ5BSiLw2BLx21ZdFbur2EtuHe&s"
+            style="width:100%; height: 500px;">
+    </div>
 
 
 
