--- a/home/home.html
+++ b/home/home.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 </head>
 
 <body>
@@ -38,16 +37,14 @@
     </div>
 
 
-    <div class="w3-content w3-section" style="height: 300px;">
+    <div id="slider_div">
         <img class="mySlides"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsLx3mwqvTSS8EUXspjzhSbGdPer8ygKydkztiVT73&s"
-            style="width:100%; height: 500px;">
+            src="https://media.istockphoto.com/photos/this-one-match-perfect-with-me-picture-id1293366109?k=20&m=1293366109&s=612x612&w=0&h=sZxIOdBctJdLx71165XgRdUAQo1SPkGsRPzDR5IF4-Y=">
+
         <img class="mySlides"
-            src="https://images.pexels.com/photos/120049/pexels-photo-120049.jpeg?cs=srgb&dl=pexels-mike-b-120049.jpg&fm=jpg"
-            style="width:100%; height: 500px;">
+            src="https://cdn.shopify.com/s/files/1/0144/7827/8739/files/DSC00201_1600x.jpg?v=1645866520">
         <img class="mySlides"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDXNiN9nNjUZJH1nqJ5BSiLw2BLx21ZdFbur2EtuHe&s"
-            style="width:100%; height: 500px;">
+            src="https://media.istockphoto.com/vectors/blank-black-tshirt-vector-for-template-vector-id1300124478?k=20&m=1300124478&s=612x612&w=0&h=H9jAqAIN2Jv1kPHFBUfUQ1mE7PniTTe2452HT9UU5YE=">
     </div>
 
 
