--- a/home/home.html
+++ b/home/home.html
@@ -40,7 +40,6 @@
     <div id="slider_div">
         <img class="mySlides"
             src="https://media.istockphoto.com/photos/this-one-match-perfect-with-me-picture-id1293366109?k=20&m=1293366109&s=612x612&w=0&h=sZxIOdBctJdLx71165XgRdUAQo1SPkGsRPzDR5IF4-Y=">
-
         <img class="mySlides"
             src="https://cdn.shopify.com/s/files/1/0144/7827/8739/files/DSC00201_1600x.jpg?v=1645866520">
         <img class="mySlides"
@@ -48,6 +47,30 @@
     </div>
 
 
+
+    <!--              Cards                -->
+    <div id="cards_main_div">
+        <div class="cards">
+            <img class="cards_images"
+                src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
+            <p>text</p>
+        </div>
+        <div class="cards">
+            <img class="cards_images"
+                src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
+            <p>text</p>
+        </div>
+        <div class="cards">
+            <img class="cards_images"
+                src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
+            <p>text</p>
+        </div>
+        <div class="cards">
+            <img class="cards_images"
+                src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
+            <p>text</p>
+        </div>
+    </div>
 
 
     <script src="home.js"></script>
