--- a/home/home.html
+++ b/home/home.html
@@ -50,7 +50,7 @@
 
     <!--              Cards                -->
     <div id="cards_main_div">
-        <div class="cards">
+        <!-- <div class="cards">
             <img class="cards_images"
                 src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
             <p>text</p>
@@ -69,11 +69,12 @@
             <img class="cards_images"
                 src="https://cdn.shopify.com/s/files/1/0144/7827/8739/products/AY5A2616_2000x.jpg?v=1659622146" alt="">
             <p>text</p>
-        </div>
+        </div> -->
     </div>
 
 
     <script src="home.js"></script>
+    <script src="card-data.js"></script>
 </body>
 
 </html>
