--- a/home/home.html
+++ b/home/home.html
@@ -27,10 +27,10 @@
 
             <div id="responsiveNavLinksDivMain">
                 <div id="responsiveNavLinksDiv">
-                    <p><a class="links" href="#">Books</a></p>
-                    <p></p><a class="links" href="#">Quizzes</a></p>
-                    <p><a class="links" href="#">Snippets</a></p>
-                    <p><a class="links" href="#">Tools</a></p>
+                    <p><a class="responsive_nav_links" href="#">Home</a></p>
+                    <p><a class="responsive_nav_links" href="#">All Products</a></p>
+                    <p><a class="responsive_nav_links" href="#">About Us</a></p>
+                    <p><a class="responsive_nav_links" href="#">Contact Us</a></p>
                 </div>
             </div>
         </nav>
