--- a/home/home.html
+++ b/home/home.html
@@ -56,7 +56,7 @@
 
 
     <script src="home.js"></script>
-    <script src="card-data.js"></script>
+    <script src="cards.js"></script>
 </body>
 
 </html>
