--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -12,9 +12,15 @@
 <body>
 
     <div>
+        <div class="upperDiv"></div>
         <img id="main_img" src="">
-        <p id="product_name"></p>
-        <p id="product_price"></p>
+        <span id="product_name"></p>
+            <p id="product_price"></p>
+    </div>
+    <div>
+        <img id="productImg1" src="" class="other_images" />
+        <img id="productImg2" src="" class="other_images" />
+        <img id="productImg3" src="" class="other_images" />
     </div>
 
 
