--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -12,27 +12,30 @@
 <body>
 
     <div class="main-container">
-        <div class="upperContainer">
-            <div class="imgBox">
-                <img id="main_img" src="">
-            </div>
-            <div class="productDetailsDiv">
-                <p id="product_name"></p>
-                <p id="product_price">RS </p>
-                <ul>
-                    <li>
-                        <p class="dummy_data">Lorem Ipsum</p>
-                    </li>
-                    <li>
-                        <p class="dummy_data">Dummy text</p>
-                    </li>
-                    <li>
-                        <p class="dummy_data">Contrary to popular</p>
-                    </li>
-                </ul>
+        <div class="imgBox">
+            <img id="main_img" src="">
+        </div>
+        <div class="productDetailsDiv">
+            <p id="product_name"></p>
+            <p id="product_price">RS </p>
+            <ul>
+                <li>
+                    <p class="dummy_data">Lorem Ipsum</p>
+                </li>
+                <li>
+                    <p class="dummy_data">Dummy text</p>
+                </li>
+                <li>
+                    <p class="dummy_data">Contrary to popular</p>
+                </li>
+            </ul>
 
-                <p class="size">Size <button>S</button> <button>M</button> <button>L</button></p>
-            </div>
+            <p class="size"><span class="size_heading">Size</span>
+                <button class="size_btns">S</button>
+                <button class="size_btns">M</button>
+                <button class="size_btns">L</button>
+            </p>
+            <hr>
         </div>
         <div>
             <div id="otherImagesOfProduct">
