--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="product-details.css">
+    <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -35,7 +36,19 @@
                 <button class="size_btns">M</button>
                 <button class="size_btns">L</button>
             </p>
+            <p class="stock">4 in stock</p>
             <hr>
+            <br>
+            <button class="contact_us_btn">Contact Us <i class="fa-solid fa-phone"></i></button>
+            <br>
+            <div class="five_stars_div">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <span id="rating_percent"> (4.9)</span>
+            </div>
         </div>
         <div>
             <div id="otherImagesOfProduct">
