product-details page styling

--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -36,7 +36,6 @@
                 <button class="size_btns">M</button>
                 <button class="size_btns">L</button>
             </p>
-            <p class="stock">4 in stock</p>
             <hr>
             <br>
             <button class="contact_us_btn">Contact Us <i class="fa-solid fa-phone"></i></button>
@@ -49,6 +48,13 @@
                 <i class="fa-solid fa-star"></i>
                 <span id="rating_percent"> (4.9)</span>
             </div>
+
+            <div id="links_icons_div">
+                <a href="#" class="links"><i class="fa-brands fa-facebook-f links_icons"></i></a>
+                <a href="#" class="links"><i class="fa-brands fa-twitter links_icons"></i></a>
+                <a href="#" class="links"><i class="fa-brands fa-instagram links_icons"></i></a>
+                <a href="#" class="links"><i class="fa-brands fa-whatsapp links_icons"></i></a>
+            </div>
         </div>
         <div>
             <div id="otherImagesOfProduct">
@@ -58,7 +64,6 @@
                         id="productImg2" src=""></a></li>
                 <a id="productImgLink3" onclick="return false" href="" target="imgBox"><img class="other_images"
                         id="productImg3" src=""></a></li>
-                </ul>
             </div>
         </div>
 
