--- a/home/home.html
+++ b/home/home.html
@@ -17,20 +17,20 @@
         <nav id="navbar">
             <p id="nav_logo_heading">Men's Closet</p>
             <div class="nav_links_div">
-                <a class="links" href="#">Home</a>
-                <a class="links" href="#">All Products</a>
-                <a class="links" href="#">About Us</a>
-                <a class="links" href="#">Contact Us</a>
+                <p class="nav_links_para"><a class="links" href="#">Home</a></p>
+                <p class="nav_links_para"><a class="links" href="#">All Products</a></p>
+                <p class="nav_links_para"><a class="links" href="#">About Us</a></p>
+                <p class="nav_links_para"><a class="links" href="#">Contact Us</a></p>
             </div>
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
 
             <div id="responsiveNavLinksDivMain">
                 <div id="responsiveNavLinksDiv">
-                    <p><a class="responsive_nav_links" href="#">Home</a></p>
-                    <p><a class="responsive_nav_links" href="#">All Products</a></p>
-                    <p><a class="responsive_nav_links" href="#">About Us</a></p>
-                    <p><a class="responsive_nav_links" href="#">Contact Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Home</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">All Products</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">About Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Contact Us</a></p>
                 </div>
             </div>
         </nav>
