--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -13,50 +13,64 @@
 <body>
 
     <div class="main-container">
-        <div class="imgBox">
-            <img id="main_img" src="">
-        </div>
-        <div class="productDetailsDiv">
-            <p id="product_name"></p>
-            <p id="product_price">RS </p>
-            <ul>
-                <li>
-                    <p class="dummy_data">Lorem Ipsum</p>
-                </li>
-                <li>
-                    <p class="dummy_data">Dummy text</p>
-                </li>
-                <li>
-                    <p class="dummy_data">Contrary to popular</p>
-                </li>
-            </ul>
-
-            <p class="size"><span class="size_heading">Size</span>
-                <button class="size_btns">S</button>
-                <button class="size_btns">M</button>
-                <button class="size_btns">L</button>
-            </p>
-            <hr>
-            <br>
-            <button class="contact_us_btn">Contact Us <i class="fa-solid fa-phone"></i></button>
-            <br>
-            <div class="five_stars_div">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span id="rating_percent"> (4.9)</span>
+        <div class="row">
+            <div class="column6">
+                <div class="imgBox">
+                    <img id="main_img" src="">
+                </div>
+                <div id="otherImagesOfProduct">
+                    <a id="productImgLink1" onclick="return false" href="" target="imgBox"><img class="other_images"
+                            id="productImg1" src=""></a></li>
+                    <a id="productImgLink2" onclick="return false" href="" target="imgBox"><img class="other_images"
+                            id="productImg2" src=""></a></li>
+                    <a id="productImgLink3" onclick="return false" href="" target="imgBox"><img class="other_images"
+                            id="productImg3" src=""></a></li>
+                </div>
             </div>
+            <div class="column6">
+                <div class="productDetailsDiv">
+                    <p id="product_name"></p>
+                    <p id="product_price">RS </p>
+                    <ul>
+                        <li>
+                            <p class="dummy_data">Lorem Ipsum</p>
+                        </li>
+                        <li>
+                            <p class="dummy_data">Dummy text</p>
+                        </li>
+                        <li>
+                            <p class="dummy_data">Contrary to popular</p>
+                        </li>
+                    </ul>
 
-            <div id="links_icons_div">
-                <a href="#" class="links"><i class="fa-brands fa-facebook-f links_icons"></i></a>
-                <a href="#" class="links"><i class="fa-brands fa-twitter links_icons"></i></a>
-                <a href="#" class="links"><i class="fa-brands fa-instagram links_icons"></i></a>
-                <a href="#" class="links"><i class="fa-brands fa-whatsapp links_icons"></i></a>
+                    <p class="size"><span class="size_heading">Size</span>
+                        <button class="size_btns">S</button>
+                        <button class="size_btns">M</button>
+                        <button class="size_btns">L</button>
+                    </p>
+                    <hr>
+                    <br>
+                    <button class="contact_us_btn">Contact Us <i class="fa-solid fa-phone"></i></button>
+                    <br>
+                    <div class="five_stars_div">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span id="rating_percent"> (4.9)</span>
+                    </div>
+
+                    <div id="links_icons_div">
+                        <a href="#" class="links"><i class="fa-brands fa-facebook-f links_icons"></i></a>
+                        <a href="#" class="links"><i class="fa-brands fa-twitter links_icons"></i></a>
+                        <a href="#" class="links"><i class="fa-brands fa-instagram links_icons"></i></a>
+                        <a href="#" class="links"><i class="fa-brands fa-whatsapp links_icons"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div>
+        <!-- <div>
             <div id="otherImagesOfProduct">
                 <a id="productImgLink1" onclick="return false" href="" target="imgBox"><img class="other_images"
                         id="productImg1" src=""></a></li>
@@ -66,7 +80,7 @@
                         id="productImg3" src=""></a></li>
             </div>
         </div>
-
+ -->
 
 
         <script src="product-details.js"></script>
