--- a/home/home.html
+++ b/home/home.html
@@ -55,6 +55,40 @@
     </div>
 
 
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col3">
+                <p class="divs_headings">Men's Closet</p>
+                <p class="divs_content"><a class="footer_links" href="#">Twinsets</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">T-shirts</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Pants</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Trousers</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Shoes</a></p>
+            </div>
+            <div class="col3">
+                <p class="divs_headings">General</p>
+                <p class="divs_content"><a class="footer_links" href="#">Privacy Policy</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Term &amp; Condition</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">FAQs</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Modes of Payment</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Shoes</a></p>
+            </div>
+            <div class="col3">
+                <p class="divs_headings">Customer Support</p>
+                <p class="divs_content"><a class="footer_links" href="#">Deliveries &amp; Return</a> </p>
+                <p class="divs_content"><a class="footer_links" href="#">Contact Us</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Customer Care: 021 11122299</a></p>
+            </div>
+            <div class="big_column">
+                <p class="divs_headings">Useful Links</p>
+            </div>
+
+        </div>
+    </footer>
+
     <script src="home.js"></script>
     <script src="cards.js"></script>
 </body>
