--- a/home/home.html
+++ b/home/home.html
@@ -84,6 +84,12 @@
             </div>
             <div class="big_column">
                 <p class="divs_headings">Useful Links</p>
+                <div id="links_icons_div">
+                    <a href="#"><i class="fa-brands fa-facebook-f links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp links_icons"></i></a>
+                </div>
             </div>
 
         </div>
