--- a/about/about.html
+++ b/about/about.html
@@ -8,13 +8,40 @@
     <title>About Us</title>
 
     <link rel="stylesheet" href="about.css">
+    <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <h1>About Us Page</h1>
+    <div id="navDiv">
+        <nav id="navbar">
+            <p id="nav_logo_heading">Men's Closet</p>
+            <div class="nav_links_div">
+                <p class="nav_links_para"><a class="links" href="../home/home.html">Home</a></p>
+                <p class="nav_links_para"><a class="links" href="#">All Products</a></p>
+                <p class="nav_links_para"><a class="links" href="about.html">About Us</a></p>
+                <p class="nav_links_para"><a class="links" href="#">Contact Us</a></p>
+            </div>
+            <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
+                    aria-hidden="true"></i></button>
+
+            <div id="responsiveNavLinksDivMain">
+                <div id="responsiveNavLinksDiv">
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Home</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">All Products</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">About Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Contact Us</a></p>
+                </div>
+            </div>
+        </nav>
+    </div>
 
 
+    <h1 style="margin: 80px 0px 0px 30px;">About Us Page</h1>
+
+
+
+    <script src="about.js"></script>
 </body>
 
 </html>
