--- a/about/about.html
+++ b/about/about.html
@@ -37,8 +37,12 @@
     </div>
 
 
-    <h1 style="margin: 80px 0px 0px 30px;">About Us Page</h1>
-
+    <div class="container">
+        <img id="about_us_img"
+            src="https://media.istockphoto.com/photos/man-clothing-picture-id626856996?k=20&m=626856996&s=612x612&w=0&h=v4om_trbGLv10gON2ZybLhE5jSFZY9o25ZNS0ZbnWCo=">
+        <p id="img_text">Shop A Lot, Spend A Little
+        </p>
+    </div>
 
 
     <script src="about.js"></script>
