--- a/home/home.html
+++ b/home/home.html
@@ -17,9 +17,9 @@
         <nav id="navbar">
             <p id="nav_logo_heading">Men's Closet</p>
             <div class="nav_links_div">
-                <p class="nav_links_para"><a class="links" href="#">Home</a></p>
+                <p class="nav_links_para"><a class="links" href="home.html">Home</a></p>
                 <p class="nav_links_para"><a class="links" href="#">All Products</a></p>
-                <p class="nav_links_para"><a class="links" href="../about//about.html">About Us</a></p>
+                <p class="nav_links_para"><a class="links" href="../about/about.html">About Us</a></p>
                 <p class="nav_links_para"><a class="links" href="#">Contact Us</a></p>
             </div>
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
