about_us page completed

--- a/about/about.html
+++ b/about/about.html
@@ -40,10 +40,69 @@
     <div class="container">
         <img id="about_us_img"
             src="https://media.istockphoto.com/photos/man-clothing-picture-id626856996?k=20&m=626856996&s=612x612&w=0&h=v4om_trbGLv10gON2ZybLhE5jSFZY9o25ZNS0ZbnWCo=">
-        <p id="img_text">Shop A Lot, Spend A Little
+        <p id="img_text">Shop A Lot, Spend A Little</p>
+    </div>
+
+    <div id="about_us_div">
+        <p id="who_we_are_heading">Who We Are?</p>
+        <p id="about_us_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+            has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <br>
+        <p id="about_us_content">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+            piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
+            professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur,
+            from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
+            undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum"
+            (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of
+            ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+            comes from a line in section 1.10.32.
         </p>
     </div>
 
+
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col3">
+                <p class="divs_headings">Men's Closet</p>
+                <p class="divs_content"><a class="footer_links" href="#">Twinsets</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">T-shirts</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Pants</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Trousers</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Shoes</a></p>
+            </div>
+            <div class="col3">
+                <p class="divs_headings">General</p>
+                <p class="divs_content"><a class="footer_links" href="#">Privacy Policy</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Term &amp; Condition</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">FAQs</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Modes of Payment</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Shoes</a></p>
+            </div>
+            <div class="col3">
+                <p class="divs_headings">Customer Support</p>
+                <p class="divs_content"><a class="footer_links" href="#">Deliveries &amp; Return</a> </p>
+                <p class="divs_content"><a class="footer_links" href="#">Contact Us</a></p>
+                <p class="divs_content"><a class="footer_links" href="#">Customer Care: 021 11122299</a></p>
+            </div>
+            <div class="big_column">
+                <p class="divs_headings">Useful Links</p>
+                <div id="links_icons_div">
+                    <a href="#"><i class="fa-brands fa-facebook-f links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram links_icons"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp links_icons"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
     <script src="about.js"></script>
 </body>
