all-products page added

--- a/home/home.html
+++ b/home/home.html
@@ -18,19 +18,22 @@
             <p id="nav_logo_heading">Men's Closet</p>
             <div class="nav_links_div">
                 <p class="nav_links_para"><a class="links" href="home.html">Home</a></p>
-                <p class="nav_links_para"><a class="links" href="#">All Products</a></p>
+                <p class="nav_links_para"><a class="links" href="../all-products/all-products.html">All Products</a></p>
                 <p class="nav_links_para"><a class="links" href="../about/about.html">About Us</a></p>
-                <p class="nav_links_para"><a class="links" href="#">Contact Us</a></p>
+                <p class="nav_links_para"><a class="links" href="../contact/contact.html">Contact Us</a></p>
             </div>
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
 
             <div id="responsiveNavLinksDivMain">
                 <div id="responsiveNavLinksDiv">
-                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Home</a></p>
-                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">All Products</a></p>
-                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">About Us</a></p>
-                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="#">Contact Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="home.html">Home</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../all-products/all-products.html">All Products</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../about/about.html">About Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../contact/contact.html">Contact Us</a></p>
                 </div>
             </div>
         </nav>
