--- a/all-products/all-products.html
+++ b/all-products/all-products.html
@@ -6,11 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Products</title>
+    <link rel="stylesheet" href="all-products.css">
+    <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <h1>All Products</h1>
+    <div id="navDiv">
+        <nav id="navbar">
+            <p id="nav_logo_heading">Men's Closet</p>
+            <div class="nav_links_div">
+                <p class="nav_links_para"><a class="links" href="../home/home.html">Home</a></p>
+                <p class="nav_links_para"><a class="links" href="all-products.html">All Products</a></p>
+                <p class="nav_links_para"><a class="links" href="../about/about.html">About Us</a></p>
+                <p class="nav_links_para"><a class="links" href="../contact/contact.html">Contact Us</a></p>
+            </div>
+            <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
+                    aria-hidden="true"></i></button>
+
+            <div id="responsiveNavLinksDivMain">
+                <div id="responsiveNavLinksDiv">
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../home/home.html">Home</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../all-products/all-products.html">All Products</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="about.html">About Us</a>
+                    </p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../contact/contact.html">Contact Us</a></p>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <h1 style="margin: 100px 10px 10px 20px;">All Products Page</h1>
+
+
+
+    <script src="all-products.js"></script>
 </body>
 
 </html>
