--- a/home/home.html
+++ b/home/home.html
@@ -100,6 +100,7 @@
 
     <script src="home.js"></script>
     <script src="cards.js"></script>
+    <script src="../navbar.js"></script>
 </body>
 
 </html>
