--- a/all-products/all-products.html
+++ b/all-products/all-products.html
@@ -39,7 +39,8 @@
         </nav>
     </div>
 
-    <h1 style="margin: 100px 10px 10px 20px;">All Products Page</h1>
+    <div id="cards_main_div">
+    </div>
 
 
 
