adding products to cart

--- a/about/about.html
+++ b/about/about.html
@@ -20,7 +20,7 @@
                 <p class="nav_links_para"><a class="links" href="../home/home.html">Home</a></p>
                 <p class="nav_links_para"><a class="links" href="../all-products/all-products.html">All Products</a></p>
                 <p class="nav_links_para"><a class="links" href="about.html">About Us</a></p>
-                <p class="nav_links_para"><a class="links" href="../contact/contact.html">Contact Us</a></p>
+                <p class="nav_links_para"><a class="links" href="../cart/cart.html">Cart</a></p>
             </div>
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
@@ -34,7 +34,7 @@
                     <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="about.html">About Us</a>
                     </p>
                     <p class="responsive_nav_links_para"><a class="responsive_nav_links"
-                            href="../contact/contact.html">Contact Us</a></p>
+                            href="../cart/cart.html">Cart</a></p>
                 </div>
             </div>
         </nav>
