--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -67,6 +67,10 @@
                         <a href="#" class="links"><i class="fa-brands fa-instagram links_icons"></i></a>
                         <a href="#" class="links"><i class="fa-brands fa-whatsapp links_icons"></i></a>
                     </div>
+
+                    <div>
+                        <button onclick="addToCart()" class="add_to_cart_btn">Add to cart</button>
+                    </div>
                 </div>
             </div>
         </div>
