fetching products in cart

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="cart.css">
 </head>
 
 <body>
     <h1>Cart Page</h1>
+
+    <h1 id="total_amount">Total: </h1>
+    <div id="cart_main_div"></div>
+
+
+    <script src="cart.js"></script>
 </body>
 
 </html>
