--- a/cart/cart.html
+++ b/cart/cart.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="cart.css">
 </head>
 
 <body>
     <h1>Cart Page</h1>
 
-    <h1 id="total_amount">Total: </h1>
+    <h1 id="total_amount">Total: 0</h1>
     <div id="cart_main_div"></div>
 
 
