picking current location of user

--- a/cart/order-now/order.html
+++ b/cart/order-now/order.html
@@ -19,7 +19,8 @@
     <input class=" inputFields" id="name" type="text" placeholder="Enter your name" />
     <input class="inputFields" id="email" type="email" placeholder="Enter your email" />
     <input class="inputFields" id="phoneNo" type="text" placeholder="Enter your phone number" maxlength="11" />
-
+    <input class="inputFields" id="phoneNo" type="text" placeholder="Enter your location" maxlength="11" />
+    <button onclick="pickCurrentLocation()">pick current location</button>
     <button class="order_now_btn" onclick="setOrder()">Order Now</button>
     <!-- </form> -->
 
