--- a/product_details/product-details.html
+++ b/product_details/product-details.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="product-details.css">
-    <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
     <div class="main-container">
+
+        <a href="../cart/cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span
+                id="cart_quantity">0</span></a>
         <div class="row">
             <div class="column6">
                 <div class="imgBox">
@@ -27,6 +30,7 @@
                             id="productImg3" src=""></a></li>
                 </div>
             </div>
+
             <div class="column6">
                 <div class="productDetailsDiv">
                     <p id="product_name"></p>
