contact page added

--- a/home/home.html
+++ b/home/home.html
@@ -20,9 +20,11 @@
                 <p class="nav_links_para"><a class="links" href="home.html">Home</a></p>
                 <p class="nav_links_para"><a class="links" href="../all-products/all-products.html">All Products</a></p>
                 <p class="nav_links_para"><a class="links" href="../about/about.html">About Us</a></p>
+                <p class="nav_links_para"><a class="links" href="../contact/contact.html">Contact Us</a></p>
 
-                <p class="nav_links_para"><a class="links" href="../cart/cart.html"><i class="fa fa-shopping-cart"
-                            aria-hidden="true"></i><span id="cart_quantity">0</span> </a></p>
+                <p class="cartLinkPara"><a class="links cartLink" href="../cart/cart.html"><i
+                            class="fa fa-shopping-cart" aria-hidden="true"></i><span id="cart_quantity">0</span> </a>
+                </p>
             </div>
             <button onclick="myToggle()" id="toggleButton"><i id="navIcon" class="fa-solid fa-bars"
                     aria-hidden="true"></i></button>
@@ -34,6 +36,9 @@
                             href="../all-products/all-products.html">All Products</a></p>
                     <p class="responsive_nav_links_para"><a class="responsive_nav_links"
                             href="../about/about.html">About Us</a></p>
+                    <p class="responsive_nav_links_para"><a class="responsive_nav_links"
+                            href="../contact/contact.html">Contact Us</a></p>
+
                     <p class="responsive_nav_links_para"><a class="responsive_nav_links" href="../cart/cart.html"><i
                                 class="fa fa-shopping-cart" aria-hidden="true"></i>
                         </a></p>
