--- a/cart/cart.html
+++ b/cart/cart.html
@@ -7,12 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="cart.css">
+    <script src="https://kit.fontawesome.com/6a4049d369.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <h1>Cart Page</h1>
 
+    <p class="cartLinkPara"><a class="links cartLink" href="../cart/cart.html"><i class="fa fa-shopping-cart"
+                aria-hidden="true"></i><span id="cart_quantity">0</span> </a>
+    </p>
+    <br />
     <h1 id="total_amount">Total: 0</h1>
+    <a href="order-now/order.html"><button class="order_btn">Order Now</button></a>
     <div id="cart_main_div"></div>
 
 
