--- a/cart/cart.html
+++ b/cart/cart.html
@@ -19,7 +19,8 @@
     <br />
     <h1 id="total_amount">Total: 0</h1>
     <a href="order-now/order.html"><button class="order_btn">Order Now</button></a>
-    <div id="cart_main_div"></div>
+    <div id="cart_main_div">
+    </div>
 
 
     <script src="cart.js"></script>
