--- a/cart/cart.html
+++ b/cart/cart.html
@@ -17,13 +17,18 @@
                 aria-hidden="true"></i><span id="cart_quantity">0</span> </a>
     </p>
     <br />
-    <h1 id="total_amount">Total: 0</h1>
-    <a href="order-now/order.html"><button class="order_btn">Order Now</button></a>
     <div id="cart_main_div">
-    </div>
+        <div id="order_portion">
+            <button>Order Now</button>
+            <div id="total_div">
+                <p id="totalAmount">Total
+                    <span id="total"></span>
+                </p>
+            </div>
+        </div>
 
 
-    <script src="cart.js"></script>
+        <script src="cart.js"></script>
 </body>
 
 </html>
