--- a/cart/cart.html
+++ b/cart/cart.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Cart Page</h1>
+    <h1>Men's Closet</h1>
 
     <p class="cartLinkPara"><a class="links cartLink" href="../cart/cart.html"><i class="fa fa-shopping-cart"
                 aria-hidden="true"></i><span id="cart_quantity">0</span> </a>
@@ -19,7 +19,7 @@
     <br />
     <div id="cart_main_div">
         <div id="order_portion">
-            <button>Order Now</button>
+            <button id="checkoutBtn">CHECKOUT</button>
             <div id="total_div">
                 <p id="totalAmount">Total
                     <span id="total"></span>
