--- a/cart/cart.html
+++ b/cart/cart.html
@@ -18,6 +18,12 @@
     </p>
     <br />
     <div id="cart_main_div">
+        <div id="mainDiv">
+            <div id="productDiv"><p class="mainHeadings">PRODUCT</p></div>
+            <div id="quantityDiv"><p class="mainHeadings">QUANTITY</p></div>
+            <div id="subtotalDiv"><p class="mainHeadings">SUBTOTAL</p></div>
+            <div id="delete_btn_div"></div>
+            </div>
         <div id="order_portion">
             <button id="checkoutBtn">CHECKOUT</button>
             <div id="total_div">
